tests/reports/test_full_pipeline2.txt
C:\Users\Fly\.local\bin\uv :   File "<string>", line 29
所在位置 C:\Users\Fly\AppData\Local\Temp\genie-ps-1775142783999-2hudhd.ps1:1 字符: 107
+ ... 5ef746ccb58a56fc9dfe6c6a"; C:\Users\Fly\.local\bin\uv run python -c "
+                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 29:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    {'role': 'system', 'content': '浣犳槸涓\u20ac涓\ue043笓涓氱殑鏃ヨ\ue1e2缈昏瘧銆傝\ue1ec灏嗘棩鏂囩炕璇戞垚涓\ue15f枃锛屼繚鎸佽嚜鐒舵祦鐣咃紝鍙ｈ\ue1e2鍖栥\u20a
c?},
                                  ^
SyntaxError: unterminated string literal (detected at line 29)
